style shit is starting to come up

--- a/index.html
+++ b/index.html
@@ -5,33 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing page</title>
+    <link rel="stylesheet" href="/home/samuel/repos/landing-page/styles.css">
 </head>
 <body>
+    <div class="container">
+        <div class="page-logo">
+        <img src="/home/samuel/repos/landing-page/images/logo.jpeg" alt="header logo">
+       </div>
+   <div class="nav-bar">
+    <a class="active" href="login">login</a>
+    <a href="about">about</a>
+    <a href="contact">contact</a>
+    <h1>Samacade Coffee House</h1>
+   <strong> <h2>Samacade Coffee House is a one stop shop.</h2></strong>
+    <h3> Get access the best quality Kenyan coffee freshly ground. We also have freshly brewed coffee in different flavours as well as your favorite treats.</h3>
+<div> <button>signup</button></div>
+<div class="first-pic">
+<img src="/home/samuel/repos/landing-page/images/pexels-lisa-fotios-1995010.jpg" alt="a coffee shop entrance ">
+</div>
 
-    <img src="/home/samuel/repos/landing-page/images/logo.jpeg" alt="header logo">
-    <ul>
-    <li><a href="home">home</a></li>
-    <li> <a href="about">about</a></li>
-    <li><a href="contact">contact</a></li>
-    </ul>
- <h1> Samacade is the best coffee shop in East Africa</h1>
- <p> at Samacade coffee house we offer high quality, freshly ground kenyan coffee to referesh and keep you going the entire day. we have something for everyone.</p>
-<button>signup</button>
- <img src="/home/samuel/repos/landing-page/images/pexels-lisa-fotios-1995010.jpg"width= "300" alt="the coffee shop's entrance">
-<h2>some of the the services we offer</h2>
-<img src="/home/samuel/repos/landing-page/images/pexels-lina-kivaka-1813466.jpg" width="300"alt="cup of coffee and a donut">
-<p> Enjoy a cup of coffe at a quiet place</p>
-<img src="/home/samuel/repos/landing-page/images/pexels-tom-swinnen-1309778.jpg" width="300" alt="coffee grounding">
-<p>We offer only freshly ground coffee</p>
-<img src="/home/samuel/repos/landing-page/images/hybrid-storytellers-HM55pOGcNXA-unsplash.jpg" width="300" alt="bag of coffee beans">
-<p>Get a bag of the best Kenyan coffee coffee beans for you and your family</p>
-<img src="/home/samuel/repos/landing-page/images/pexels-chevanon-photography-312418.jpg" width="300" alt="expresso">
-<p>Enjoy the best expresso in Nairobi</p>
-<p>A yawn is a silent scream for coffee -<strong>Samacade Coffee House</strong></p>
+</div>
 
-<p> to get your orders delivered at your door step please signup</p>
-<button>signup</button>
-<p>copyright © Samacade coffee 2022 </p>
 
 
 </body>
