made more changes to the buttons and the hover effect on the navigation bar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a class="active" href="login">login</a>
     <a href="about">about</a>
     <a href="contact">contact</a>
-    <h1>Samacade Coffee House</h1>
+    <em><h1>Samacade Coffee House</h1></em>
    <strong> <h2>Samacade Coffee House is a one stop shop.</h2></strong>
     <h3> Get access the best quality Kenyan coffee freshly ground. We also have freshly brewed coffee in different flavours as well as your favorite treats.</h3>
 <div> <button>signup</button></div>
