I have made more developments on the middle part of the landing page

--- a/index.html
+++ b/index.html
@@ -18,13 +18,23 @@
     <a href="contact">contact</a>
     <em><h1>Samacade Coffee House</h1></em>
    <strong> <h2>Samacade Coffee House is a one stop shop.</h2></strong>
-    <h3> Get access the best quality Kenyan coffee freshly ground. We also have freshly brewed coffee in different flavours as well as your favorite treats.</h3>
+    <h3> Get access the best quality freshly ground Kenyan coffee delivered to your home or enjoy freshly brewed coffee in different flavours as well as your favorite treats at our cafe.</h3>
 <div> <button>signup</button></div>
+
 <div class="first-pic">
 <img src="/home/samuel/repos/landing-page/images/hybrid-storytellers-HM55pOGcNXA-unsplash.jpg" alt="a coffee shop entrance ">
 </div>
-
 </div>
+<div class="mid-part">
+    <h4>About us</h4>
+    <div class="all-pics">
+        <img src="/home/samuel/repos/landing-page/images/pexels-chevanon-photography-312418.jpg" alt="a cup of coffee with with cream">
+        <img src="/home/samuel/repos/landing-page/images/pexels-lina-kivaka-1813466.jpg" alt="cup of coffee and a donut on a table">
+        <img src="/home/samuel/repos/landing-page/images/pexels-lisa-fotios-1995010.jpg" alt="inside of a beautiful coffee shop">
+        <img src="/home/samuel/repos/landing-page/images/pexels-tom-swinnen-1309778.jpg" alt="fresh coffe being ground">
+    </div>
+</div>
+
 
 
 
