I have re-done the htmls

--- a/index.html
+++ b/index.html
@@ -5,38 +5,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing page</title>
-    <link rel="stylesheet" href="/home/samuel/repos/landing-page/styles.css">
+    
 </head>
 <body>
-    <div class="container">
-        <div class="page-logo">
-        <img src="/home/samuel/repos/landing-page/images/logo.jpeg" alt="header logo">
+<div class="section1"></div>
+  <header>
+    <div class="header-logo">
+        <H1>SAmCADe COFFEE</H1>
+
+        </div>
+        <div class="header-links">
+            <a href="About">About</a>
+            <a href="Contacts">Contacts</a>
+            <a href="Login">Login</a>
+
+        </div>
+  </header>
+
+    <div class="section1-text">
+       <div class="section1-text1">
+          <h2>Welcome to Samcade coffee House.</h2>
+        </div>
+      <div class="section1-text2">
+          <h4>We offer only the best of Kenyan freshly ground coffee, fresh coffee beans as well as a coffee beverage of your choice. </h4>
        </div>
-   <div class="nav-bar">
-    <a class="active" href="login">login</a>
-    <a href="about">about</a>
-    <a href="contact">contact</a>
-    <em><h1>Samacade Coffee House</h1></em>
-   <strong> <h2>Samacade Coffee House is a one stop shop.</h2></strong>
-    <h3> Get access the best quality freshly ground Kenyan coffee delivered to your home or enjoy freshly brewed coffee in different flavours as well as your favorite treats at our cafe.</h3>
-<div> <button>signup</button></div>
-
-<div class="first-pic">
-<img src="/home/samuel/repos/landing-page/images/hybrid-storytellers-HM55pOGcNXA-unsplash.jpg" alt="a coffee shop entrance ">
-</div>
-</div>
-<div class="mid-part">
-    <h4>About us</h4>
-    <div class="all-pics">
-        <img src="/home/samuel/repos/landing-page/images/pexels-chevanon-photography-312418.jpg" alt="a cup of coffee with with cream">
-        <img src="/home/samuel/repos/landing-page/images/pexels-lina-kivaka-1813466.jpg" alt="cup of coffee and a donut on a table">
-        <img src="/home/samuel/repos/landing-page/images/pexels-lisa-fotios-1995010.jpg" alt="inside of a beautiful coffee shop">
-        <img src="/home/samuel/repos/landing-page/images/pexels-tom-swinnen-1309778.jpg" alt="fresh coffe being ground">
+    <div class="section1-image">
+   <img src="/home/samuel/repos/landing-page/images/hybrid-storytellers-HM55pOGcNXA-unsplash.jpg" alt="picture of packed coffee" width="300" height="300">
     </div>
+    <button>singup</button>
+
 </div>
+<div class="section2">
+ <div class="section2-text1">
+   <h3>More information about us</h3>
+ </div>
+ <div class="boxes">
+   <div class="box">
+     <div class="b1container">
+      <img src="/home/samuel/repos/landing-page/images/pexels-lina-kivaka-1813466.jpg" alt="cup of coffee and a donut on a table" width="300" height="300">
+     </div>
+     <h5 class="b1info">Buy your favorite coffee takeaway</h5>
+   </div>
+   <div class="box">
+    <div class="b1container">
+      <img src="/home/samuel/repos/landing-page/images/pexels-chevanon-photography-312418.jpg" alt="a cup of coffee with with cream" width="300" height="300">
+    </div>
+    <h5 class="b1info"> hCose your prefered cup of coffe </h5>
+  </div>
+  <div class="box">
+    <div class="b1container">
+      <img src="/home/samuel/repos/landing-page/images/pexels-lisa-fotios-1995010.jpg" alt="inside of a beautiful coffee shop" width="300" height="300">
+    </div>
+    <h5 class="b1info">Enjoy a cup of coffee inside our elegant shop</h5>
+  </div>
+  <div class="box">
+    <div class="b1container">
+      <img src="/home/samuel/repos/landing-page/images/pexels-tom-swinnen-1309778.jpg" alt="fresh coffe being ground" width="300" height="300" >
+    </div>
+    <h5 class="b1info">Order freshly ground coffee</h5>
+  </div>
+ 
 
-
-
+ </div>
+</div>
+<div class="section3">
+  <div class="section3-text">
+    <p class="section3-text1">you do not really need an inspiratioal quote every morning to get pumped up for the day, all you need is a Samcade coffee.</p>
+    <p class="section3-text2"> -Sam Kinyua CEO Samcade Coffee </p>
+  </div>
+</div>
+<div class="section4">
+  <div class="section4-text">
+    <div class="section4-text1">signup to place your Order</div>
+    <div class="section4-text2">Get free delivery directly to your door step on your first oder</div>
+  
+  </div>
+  <button>signup</button>
+</div>
+<footer>copyright © Samcade coffee 2022</footer>
+/*html{
+  overflow-y: scroll; overflow-x:hidden;
+}
 
 </body>
 
