finished section one

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
     <title>landing page</title>
     
 </head>
 <body>
-<div class="section1"></div>
+<div class="section1">
   <header>
     <div class="header-logo">
         <H1>SAmCADe COFFEE</H1>
@@ -21,20 +23,23 @@
 
         </div>
   </header>
-
-    <div class="section1-text">
+<div class="mid-part">
+  <div class="section1-text">
        <div class="section1-text1">
-          <h2>Welcome to Samcade coffee House.</h2>
-        </div>
-      <div class="section1-text2">
+         <h2>Welcome to Samcade coffee House</h2>
+       </div>
+  <div class="section1-text2">
           <h4>We offer only the best of Kenyan freshly ground coffee, fresh coffee beans as well as a coffee beverage of your choice. </h4>
        </div>
+       <div class="section1-button"><button>sign up</button></div>
+      </div>   
     <div class="section1-image">
-   <img src="/home/samuel/repos/landing-page/images/hybrid-storytellers-HM55pOGcNXA-unsplash.jpg" alt="picture of packed coffee" width="300" height="300">
+   <img src="/images/hybrid-storytellers-HM55pOGcNXA-unsplash.jpg" alt="picture of packed coffee" width="500" height="300">
     </div>
-    <button>singup</button>
-
+  
+ 
 </div>
+   
 <div class="section2">
  <div class="section2-text1">
    <h3>More information about us</h3>
@@ -42,7 +47,7 @@
  <div class="boxes">
    <div class="box">
      <div class="b1container">
-      <img src="/home/samuel/repos/landing-page/images/pexels-lina-kivaka-1813466.jpg" alt="cup of coffee and a donut on a table" width="300" height="300">
+      <img src="/images/pexels-lina-kivaka-1813466.jpg" alt="cup of coffee and a donut on a table" width="300" height="300">
      </div>
      <h5 class="b1info">Buy your favorite coffee takeaway</h5>
    </div>
