--- a/index.html
+++ b/index.html
@@ -42,30 +42,30 @@
    
 <div class="section2">
  <div class="section2-text1">
-   <h3>More information about us</h3>
+   <h3 class="s2h3">More information about us</h3>
  </div>
  <div class="boxes">
    <div class="box">
      <div class="b1container">
-      <img src="/images/pexels-lina-kivaka-1813466.jpg" alt="cup of coffee and a donut on a table" width="300" height="300">
+      <img src="/images/pexels-lina-kivaka-1813466.jpg" alt="cup of coffee and a donut on a table" width="100" height="100" class="s2boxing">
      </div>
      <h5 class="b1info">Buy your favorite coffee takeaway</h5>
    </div>
    <div class="box">
     <div class="b1container">
-      <img src="/home/samuel/repos/landing-page/images/pexels-chevanon-photography-312418.jpg" alt="a cup of coffee with with cream" width="300" height="300">
+      <img src="/images/pexels-chevanon-photography-312418.jpg" alt="a cup of coffee with with cream" width="100" height="100" class="s2boxing">
     </div>
     <h5 class="b1info"> hCose your prefered cup of coffe </h5>
   </div>
   <div class="box">
     <div class="b1container">
-      <img src="/home/samuel/repos/landing-page/images/pexels-lisa-fotios-1995010.jpg" alt="inside of a beautiful coffee shop" width="300" height="300">
+      <img src="/images/pexels-lisa-fotios-1995010.jpg" alt="inside of a beautiful coffee shop" width="100" height="100" class="s2boxing">
     </div>
     <h5 class="b1info">Enjoy a cup of coffee inside our elegant shop</h5>
   </div>
   <div class="box">
     <div class="b1container">
-      <img src="/home/samuel/repos/landing-page/images/pexels-tom-swinnen-1309778.jpg" alt="fresh coffe being ground" width="300" height="300" >
+      <img src="/images/pexels-tom-swinnen-1309778.jpg" alt="fresh coffe being ground" width="100" height="100" class="s2boxing">
     </div>
     <h5 class="b1info">Order freshly ground coffee</h5>
   </div>
