--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
     <div class="b1container">
       <img src="/images/pexels-chevanon-photography-312418.jpg" alt="a cup of coffee with with cream" width="100" height="100" class="s2boxing">
     </div>
-    <h5 class="b1info"> hCose your prefered cup of coffe </h5>
+    <h5 class="b1info"> Chose your prefered cup of coffe </h5>
   </div>
   <div class="box">
     <div class="b1container">
       <img src="/images/pexels-lisa-fotios-1995010.jpg" alt="inside of a beautiful coffee shop" width="100" height="100" class="s2boxing">
     </div>
-    <h5 class="b1info">Enjoy a cup of coffee inside our elegant shop</h5>
+    <h5 class="b1info">Enjoy coffee inside our elegant shop</h5>
   </div>
   <div class="box">
     <div class="b1container">
@@ -75,22 +75,27 @@
 </div>
 <div class="section3">
   <div class="section3-text">
-    <p class="section3-text1">you do not really need an inspiratioal quote every morning to get pumped up for the day, all you need is a Samcade coffee.</p>
+    <p class="section3-text1">"you do not really need an inspiratioal quote every morning to get pumped up for the day, all you need is a Samcade coffee."</p>
     <p class="section3-text2"> -Sam Kinyua CEO Samcade Coffee </p>
   </div>
 </div>
+<div class="section4-box">
 <div class="section4">
   <div class="section4-text">
-    <div class="section4-text1">signup to place your Order</div>
-    <div class="section4-text2">Get free delivery directly to your door step on your first oder</div>
-  
+    <div class="section4-text1">
+      <h5>create account!</h5>
+    </div>
+    <div class="section4-text2">
+      <h6>Get free delivery right at your doorstep in your first order</h6>
+
+    </div>
   </div>
+  
   <button>signup</button>
 </div>
+</div>
 <footer>copyright © Samcade coffee 2022</footer>
-/*html{
-  overflow-y: scroll; overflow-x:hidden;
-}
+
 
 </body>
 
