I have completed the landing page

--- a/index.html
+++ b/index.html
@@ -82,16 +82,13 @@
 <div class="section4-box">
 <div class="section4">
   <div class="section4-text">
-    <div class="section4-text1">
-      <h5>create account!</h5>
-    </div>
-    <div class="section4-text2">
-      <h6>Get free delivery right at your doorstep in your first order</h6>
-
-    </div>
+    <div class="section4-text1"><h5>create account!</h5> </div>
+      
+   
+    <div class="section4-text2"><h6>Get free delivery right to your doorstep in your first order</h6></div>
   </div>
   
-  <button>signup</button>
+  <div class="section4-button"><button>sign up</button></div>
 </div>
 </div>
 <footer>copyright © Samcade coffee 2022</footer>
