grammarical changes in section4-text2

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="section4-text1"><h5>create account!</h5> </div>
       
    
-    <div class="section4-text2"><h6>Get free delivery right to your doorstep in your first order</h6></div>
+    <div class="section4-text2"><h6>Get free delivery right to your doorstep on your first order</h6></div>
   </div>
   
   <div class="section4-button"><button>sign up</button></div>
